--- a/flash-waimai-api/src/main/resources/application-dev.properties
+++ b/flash-waimai-api/src/main/resources/application-dev.properties
@@ -12,7 +12,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.sql-script-encoding=utf-8
 spring.jpa.show-sql=true
 #server.servlet.context-path=/api
-
 spring.data.mongodb.uri=mongodb://localhost:27017/flash-waimai
 
 
@@ -21,7 +20,7 @@ api.qq.map.url=https://apis.map.qq.com/ws/
 cfg.tencentkey=RLHBZ-WMPRP-Q3JDS-V2IQA-JNRFH-EJBHL
 cfg.tencentkey2=RRXBZ-WC6KF-ZQSJT-N2QU7-T5QIT-6KF5X
 cfg.tencentkey3=OHTBZ-7IFRG-JG2QF-IHFUK-XTTK6-VXFBN
-
+## 百度地图配置
 cfg.baidu.map.url=http://api.map.baidu.com/
 cfg.baidu.key=fjke3YUipM9N64GdOIh1DNeK2APO2WcT
 cfg.baidu.key2=fjke3YUipM9N64GdOIh1DNeK2APO2WcT
