--- a/flash-waimai-core/src/test/resources/application-test.properties
+++ b/flash-waimai-core/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 debug=true
 #Mysql属性配置文件,Spring-boot系统配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/web-flash
+spring.datasource.url=jdbc:mysql://localhost:3306/waimai
 spring.datasource.username=root
 spring.datasource.password=root
 #配置自动建表：update:没有表新建，有表更新操作,控制台显示建表语句
